Fixed blog section spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -134,8 +134,6 @@
   .blog-preview-items {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -20px;
-    margin-top: -20px;
     .blog-preview-item {
       flex: 1 0 calc(50% - 20px);
       margin-left: 20px;
